build: add blue-green deployment and optimize Dockerfile

--- a/debug-chart.html
+++ b/debug-chart.html
@@ -191,53 +191,53 @@
   },
   "secondaryPlanets": {
     "sun": {
-      "lon": 245.59024140305104,
-      "lat": -0.000008056270586397842,
+      "lon": 255.67169732743287,
+      "lat": 0.00015510076667894668,
       "retrograde": false
     },
     "moon": {
-      "lon": 327.2289299605788,
-      "lat": -1.485229965333856,
+      "lon": 111.69242680659598,
+      "lat": 3.928647860596516,
       "retrograde": false
     },
     "mercury": {
-      "lon": 231.13220976431566,
-      "lat": 2.339310262821891,
-      "retrograde": true
+      "lon": 235.07502216285127,
+      "lat": 2.3572540820364294,
+      "retrograde": false
     },
     "venus": {
-      "lon": 235.91557227381062,
-      "lat": 0.8249280523643044,
+      "lon": 248.42218283200802,
+      "lat": 0.45891031133232457,
       "retrograde": false
     },
     "mars": {
-      "lon": 256.77362190574485,
-      "lat": -0.6349087629166394,
+      "lon": 264.1633690916876,
+      "lat": -0.7165912626980431,
       "retrograde": false
     },
     "jupiter": {
-      "lon": 114.73166279526235,
-      "lat": 0.150558638707383,
+      "lon": 114.05823602958951,
+      "lat": 0.17642001600249393,
       "retrograde": true
     },
     "saturn": {
-      "lon": 355.15787070779373,
-      "lat": -2.3800705353750935,
-      "retrograde": true
+      "lon": 355.23680903875004,
+      "lat": -2.3443370177351586,
+      "retrograde": false
     },
     "uranus": {
-      "lon": 59.19190225272033,
-      "lat": -0.20560704189791928,
+      "lon": 58.78760312554414,
+      "lat": -0.20364524534551923,
       "retrograde": true
     },
     "neptune": {
-      "lon": 359.4197114461037,
-      "lat": -1.3545435322461963,
+      "lon": 359.37502938546777,
+      "lat": -1.3482968552224284,
       "retrograde": true
     },
     "pluto": {
-      "lon": 301.8312682964645,
-      "lat": -3.7629292814550452,
+      "lon": 302.05079925167604,
+      "lat": -3.7624201051760817,
       "retrograde": false
     }
   },
